--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@
 }
 
 body {
-  padding-top: 80px;
+  padding-top: 70px;
 }
 
 .active {
   font-weight: 700 !important;
   font-style: italic;
+}
+
+.add-cart {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
